feat: 로그인 기능#4
카카오 로그인 기능 1차 구현

--- a/stairs/.env
+++ b/stairs/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_REST_API_KEY=981e57594292eda4f709f2d59425746d
-NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000
+NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000/login/kakao
