--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts, src/**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts", 
+    ".next/types/**/*.ts",
+    "src/**/*.tsx",
+    "global.d.ts"
   ],
   "exclude": [
     "node_modules"
