fix: 변수명 오타 수정#7

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -25,4 +25,4 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: secrets
-                  key: javascrpit-api-key
+                  key: javascript-api-key
