chore: 환경변수 관련 코드 수정#7

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,5 +4,6 @@ metadata:
   name: secrets
 type: Opaque
 data:
-  client-id: OTgxZTU3NTk0MjkyZWRhNGY3MDlmMmQ1OTQyNTc0NmQK
-  javascript-api-key: ZDM5NzIyZTYxY2ZjMTdlODM0ZjYyZDZmYjdlNmEwNTIK
+  client-id: OTgxZTU3NTk0MjkyZWRhNGY3MDlmMmQ1OTQyNTc0NmQ=
+  javascript-api-key: ZDM5NzIyZTYxY2ZjMTdlODM0ZjYyZDZmYjdlNmEwNTI=
+  front-redirect-url: aHR0cHM6Ly9rODFiZGFhOTVjZjU3YS51c2VyLWFwcC5rcmFtcG9saW5lLmNvbQ==
