--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,3 +26,8 @@ spec:
                 secretKeyRef:
                   name: secrets
                   key: javascript-api-key
+            - name: NEXT_PUBLIC_FRONT_REDIRECT_URL
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: front-redirect-url
