--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
@@ -12,8 +12,10 @@ spec:
   rules:
     - http:
         paths:
-          - backend:
-              path: /
-              pathType: Prefix
-              serviceName: frontend
-              servicePort: 3000
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 3000
