fix: deployment.yaml#7

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,3 +31,5 @@ spec:
                 secretKeyRef:
                   name: secrets
                   key: front-redirect-url
+      imagePullSecrets:
+        - name: secrets
