map관련 코드 수정

--- a/stairs/.env
+++ b/stairs/.env
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_REST_API_KEY=981e57594292eda4f709f2d59425746d
-NEXT_PUBLIC_JAVASCRIPT_API_KEY=d39722e61cfc17e834f62d6fb7e6a052
-NEXT_PUBLIC_REDIRECT_URI=http://localhost:3000/login/kakao
+NEXT_PUBLIC_JS_KEY=	c85c2bcbc847f193c25e3c485ae64d18
+NEXT_PUBLIC_REST_API_KEY =aad9fffaff5b6655b991487c5ff8b445
+NEXT_PUBLIC_sk_api_key=NjRgcEPAUm1f5Y2XCrQ7A8XJOeTx2OGy3D872r2U  
+NEXT_PUBLIC_serviceKey=njQB8V0%2Bf8iukC%2BuEysH0INTK2nGufDu5YFcjfyiAr2IRBYV8OiyTW4wX8NUQ%2BUHrBu0R6fw5mdjmgtRiqd89Q%3D%3D
