--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
       "dom.iterable",
       "esnext"
     ],
+    "target": "es2015",
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
